[tool.poetry]
name = "is-a-dev-docs"
version = "0.1.0"
description = "Documentation website for is-a-dev/register"
authors = ["Vaibhav Dhiman <mousemoosz@protonmail.com>"]
license = "GNU Free Documentation License"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.3.0"
mkdocs-material = "^8.2.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
